--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,11 +31,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  business_layer:
+    path: packages/business_layer
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  provider: ^6.0.4
 
 dev_dependencies:
   flutter_test:
